# chroma-embedded

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  build.sh  check_deps.py  embedding_functions.py  pyproject.toml  requirements.txt  server.sh  test.sh  upload.sh
