[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chroma-enhanced"
version = "1.0.0"
description = "Enhanced ChromaDB server with OCR-enabled PDF processing"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "ChromaDB Enhanced", email = "noreply@example.com"}
]
keywords = ["chromadb", "embeddings", "pdf", "ocr", "search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"

dependencies = [
    "chromadb>=1.1.0",
    "pymupdf>=1.26.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
    "packaging>=21.0"
]

[project.optional-dependencies]
easyocr = ["easyocr>=1.7.0"]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=1.0.0"
]
all = ["easyocr>=1.7.0"]

[project.urls]
"Homepage" = "https://github.com/your-org/chroma-enhanced"
"Bug Reports" = "https://github.com/your-org/chroma-enhanced/issues"
"Source" = "https://github.com/your-org/chroma-enhanced"

[tool.setuptools]
packages = []

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true